# qwen-coder-test

./: .gitignore  EcoSystem.uproject  main  main.py
EcoSystem/: EcoSystem.uplugin  README.md
EcoSystem/Config/: DefaultEngine.ini  DefaultGame.ini
EcoSystem/Source/: EcoSystem.Target.cs  EcoSystemEditor.Target.cs
EcoSystem/Source/EcoSystem/: EcoSystem.Build.cs
EcoSystem/Source/EcoSystem/Classes/: ECOCreature.cpp  ECOCreature.h  ECOEnvironmentManager.cpp  ECOEnvironmentManager.h
EcoSystem/Source/EcoSystem/Private/: EcoSystem.cpp
EcoSystem/Source/EcoSystem/Public/: EcoSystem.h
EcoSystemCore/: CMakeLists.txt  README.md
EcoSystemCore/Core/: EntityID.h  RandomGenerator.h  SpeciesFactory.cpp  SpeciesFactory.h  Types.h  Vector3.h
EcoSystemCore/Entities/: Creature.cpp  Creature.h
EcoSystemCore/Simulation/: Simulation.cpp  Simulation.h
EcoSystemCore/World/: Noise.h  World.cpp  World.h
EcoSystemCore/examples/: main.cpp
